cockroachlabs-preview-main/docs/v23.2/create-procedure.mdx
---
title: "CREATE PROCEDURE"
old_description: "The CREATE PROCEDURE statement creates a stored procedure."
---

import { InlineImage } from "/snippets/InlineImage.jsx";
import { CreateProcedure2 } from "/snippets/syntax-diagrams/CreateProcedure2.jsx";

<InlineImage alt="Megaphone" src="/images/common/icon-megaphone.png" /> New in v23.2: The `CREATE PROCEDURE` [statement](/docs/v23.2/sql-statements) defines a [stored procedure](/docs/v23.2/stored-procedures).

## Required privileges

- To define a procedure, a user must have [`CREATE` privilege](/docs/v23.2/security-reference/authorization#supported-privileges) on the schema of the procedure.
- To define a procedure with a [user-defined type](/docs/v23.2/create-type), a user must have [`USAGE` privilege](/docs/v23.2/security-reference/authorization#supported-privileges) on the user-defined type.
- To resolve a procedure, a user must have at least the [`USAGE` privilege](/docs/v23.2/security-reference/authorization#supported-privileges) on the schema of the procedure.
- To [call a procedure](/docs/v23.2/call), a user must have [`EXECUTE` privilege](/docs/v23.2/security-reference/authorization#supported-privileges) on the procedure.
- At procedure definition and execution time, a user must have privileges on all the objects referenced in the procedure body. Privileges on referenced objects can be revoked and later procedure calls can fail due to lack of permission.

If you grant `EXECUTE` privilege as a default privilege at the database level, newly created procedures inherit that privilege from the database.

## Synopsis

<CreateProcedure2 />

## Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>routine&#95;create&#95;name</code></td><td>The name of the procedure.</td></tr><tr><td><code>routine&#95;param</code></td><td>A comma-separated list of procedure parameters.</td></tr><tr><td><code>routine&#95;body&#95;str</code></td><td>The body of the procedure. For allowed contents, see <a href="/docs/v23.2/stored-procedures#structure">Stored Procedures</a>.</td></tr></tbody></table>

## Examples

The following are examples of basic stored procedures. For a more detailed example of a stored procedure, see [Create a stored procedure using PL/pgSQL](/docs/v23.2/stored-procedures#create-a-stored-procedure-using-pl-pgsql).

### Create a stored procedure that uses a composite-type variable

Create a [composite variable](/docs/v23.2/create-type#create-a-composite-data-type):

```text
CREATE TYPE comp AS (x INT, y STRING);
```

Create the procedure, declaring the `comp` variable you created:

```sql
CREATE OR REPLACE PROCEDURE proc() LANGUAGE PLpgSQL AS $$
  DECLARE
    v comp := ROW(1, 'foo');
  BEGIN
    RAISE NOTICE '%', v;
  END
  $$;
```

```sql
CALL proc();
```

```text
NOTICE: (1,foo)
CALL
```

### Create a stored procedure that uses conditional logic

The following example uses [PL/pgSQL conditional statements](/docs/v23.2/plpgsql#write-conditional-statements):

```sql
CREATE OR REPLACE PROCEDURE proc(a INT, b INT) AS 
  $$
  DECLARE
    result INT;
  BEGIN
    IF a > b THEN
      RAISE NOTICE 'Condition met: a is greater than b';
    ELSE
      RAISE NOTICE 'Condition not met: a is not greater than b';
    END IF;
  END;
  $$ LANGUAGE PLpgSQL;
```

```sql
CALL proc(1, 2);
```

```text
NOTICE: Condition not met: a is not greater than b
CALL
```

### Create a stored procedure that uses a `WHILE` loop

The following example uses [PL/pgSQL loop statements](/docs/v23.2/plpgsql#write-loops):

```sql
CREATE OR REPLACE PROCEDURE arr_var() AS 
  $$
  DECLARE
    x INT[] := ARRAY[1, 2, 3, 4, 5];
    n INT;
    i INT := 1;
  BEGIN
    n := array_length(x, 1);
    WHILE i <= n LOOP
      RAISE NOTICE '%: %', i, x[i];
      i := i + 1;
    END LOOP;
  END
  $$ LANGUAGE PLpgSQL;
```

```sql
CALL arr_var();
```

```text
NOTICE: 1: 1
NOTICE: 2: 2
NOTICE: 3: 3
NOTICE: 4: 4
NOTICE: 5: 5
```

## See also

- [Stored Procedures](/docs/v23.2/stored-procedures)
- [PL/pgSQL](/docs/v23.2/plpgsql)
- [`CALL`](/docs/v23.2/call)
- [`ALTER PROCEDURE`](/docs/v23.2/alter-procedure)
- [`DROP PROCEDURE`](/docs/v23.2/drop-procedure)
